--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,4 +12,12 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - 8080:8080
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    entrypoint: /usr/local/bin/py.test -W error 
+    restart: 'no'
+    volumes:
+      - .:/app
 version: '3'
